# xlrs

./: .clang-tidy  .gitignore  AGENTS.md  BLE_IMPLEMENTATION.md  BLUETOOTH_IMPLEMENTATION.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  platformio.ini  web_client.html
apps/rx/: main.cpp
apps/tx/: main.cpp
cmake/: pico_sdk_import.cmake
datasheets/: README.md
docs/: README.md  build-test-flash.md  getting-started.md  index.md  rc-build-flash.md  rc-overview.md  rc-usb-hid.md  rc-webui.md
docs/crsf/: binding.md  index.md
docs/developer/: architecture.md  code-map.md  configuration.md  elrs-comparison.md  open-issues.md  ota-protocol.md  safety-and-failsafe.md  sim_test_enhancements_plan.md  telemetry-and-link-stats.md  terminology.md  testing.md  timing-and-scheduler.md
docs/hardware/: bench-bringup.md  bench-link-acquisition-retrospective.md  pinout.md  sx1280-wiring.md
docs/interfaces/: index.md  rf-config-storage.md  rx-crsf.md  tx-controller-crsf.md  tx-controller-uart.md
docs/troubleshooting/: index.md  serial-logs.md  sx1280-phy-init.md  symptom-matrix.md
examples/: remote_mcu_interface.cpp
fpv_rx_config/: README.md  pubspec.yaml
fpv_rx_config/android/app/: build.gradle.kts
fpv_rx_config/android/app/src/debug/: AndroidManifest.xml
fpv_rx_config/android/app/src/main/: AndroidManifest.xml
fpv_rx_config/android/app/src/main/kotlin/com/example/fpv_rx_config/: MainActivity.kt
fpv_rx_config/ios/Runner/: Info.plist
fpv_rx_config/ios/Runner.xcodeproj/: project.pbxproj
fpv_rx_config/lib/: main.dart
fpv_rx_config/linux/: CMakeLists.txt
fpv_rx_config/linux/runner/: my_application.cc
fpv_rx_config/macos/Runner.xcodeproj/: project.pbxproj
fpv_rx_config/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
fpv_rx_config/macos/Runner/Configs/: AppInfo.xcconfig
fpv_rx_config/test/: widget_test.dart
fpv_rx_config/web/: index.html  manifest.json
fpv_rx_config/windows/: CMakeLists.txt
fpv_rx_config/windows/runner/: Runner.rc  main.cpp
include/: debug_ndjson.h  rc_power_config.h
lib/CRC/: crc.cpp  crc.h
lib/CRSF/: CRSF.cpp  CRSF.h
lib/CrsfProtocol/: CRSFConnector.cpp  CRSFConnector.h  CRSFEndpoint.cpp  CRSFParameters.h  CRSFParser.cpp  CRSFParser.h  CRSFRouter.cpp  CRSFRouter.h  CRSFSerialConnector.cpp  CRSFSerialConnector.h  SimpleTxCrsf.cpp  SimpleTxCrsf.h  crsf_protocol.h  handset_telemetry_types.h
lib/ElrsCompat/: elrs_globals.cpp  elrs_globals.h  logging.h  options.h  targets.h
lib/MSP/: msp.h  msptypes.h
lib/PPMGenerator/: PPMGenerator.cpp  PPMGenerator.h
lib/Protocol/: Protocol.cpp  Protocol.h  pairing.cpp  pairing.h
lib/RCConfig/: RCConfig.cpp  RCConfig.h
lib/RCConfigProtocol/: RCConfigProtocol.cpp  RCConfigProtocol.h
lib/SX128xLink/: PacketHandler.cpp  PacketHandler.h  SX128xLink.cpp  SX128xLink.h
lib/Security/: Security.cpp  Security.h
lib/UARTProtocol/: UARTProtocol.cpp  UARTProtocol.h
lib/WiFiConfig/: WiFiConfig.cpp  WiFiConfig.h
lib/crsfSerial/: crsfSerial.cpp  crsfSerial.h  crsf_protocol.h
lib/xlrs/app/: AppTelemetry.h  CrsfChannels.h  CrsfLinkStats.h  LinkRuntimeDiag.h  LinkStatusLed.h  PersistencePolicy.h
lib/xlrs/crypto/: AeadCipher.h  Chacha20Poly1305.h  ICipher.h
lib/xlrs/fhss/: Fhss.h  channels_2g4.h
lib/xlrs/hal/: FlashStore.cpp  FlashStore.h  SerialPort.cpp  SerialPort.h  Time.h
lib/xlrs/link/: BindingStore.h  DynamicPower.h  Link.cpp  Link.h  RateConfig.h  RfConfig.cpp  RfConfig.h  RfScheduler.cpp  RfScheduler.h  StubbornTelemetry.h  Uid.h
lib/xlrs/ota/: ChannelPack.h  OtaCodec.h  OtaFrameShrink.h  OtaPacket.h
lib/xlrs/phy/: IRadioPhy.h  MockPhy.h  RadioLibPhy.cpp  RadioLibPhy.h  Sx1280NativePhy.cpp  Sx1280NativePhy.h  Sx1280Regs.h
lib/xlrs/timing/: HwTimer.cpp  HwTimer.h  Pfd.h
lib/xlrs/util/: FlashBootCounter.cpp  FlashBootCounter.h  Mailbox.h  RingBuffer.h
plans/: architecture.md  configuration.md  debugging.md  firmware-production-roadmap.md  rc-elrs.md  transient-issues-fixes.md
scripts/: build.sh  check-env.sh  fetch-datasheets.sh  flash-monitor.sh  flash.sh  lint.sh  monitor.sh  test.sh  xlrs_helper.py
src/: bq2562x.cpp  bq2562x.h  rc_crsf_main.cpp  rx_main.cpp  rx_main_ble.cpp  rx_main_bt.cpp  rx_main_ppm.cpp  rx_main_sx128x.cpp  sx1280_debug.cpp  tx_main.cpp  tx_main_ble.cpp  tx_main_bt.cpp  tx_main_sx128x.cpp  xlrs_rx.cpp  xlrs_tx.cpp
test/: CMakeLists.txt  SimEnvironment.h  app_tests.cpp  core_tests.cpp  crsf_tests.cpp  crypto_tests.cpp  flash_tests.cpp  invariant_tests.cpp  link_tests.cpp  power_tests.cpp  scheduler_tests.cpp  telemetry_tests.cpp  timing_tests.cpp
test/test_xlrs_native/: test_main.cpp
tools/: bench-capture-once.py  bench-capture.sh  bench-run-capture.sh  setup-tx-rx-pair.sh
tools/rc-webui/: index.html  package-lock.json  package.json
tools/rc-webui/src/: App.css  App.tsx  index.css
tools/rc-webui/src/components/: AutoPairPanel.tsx  CalibratePanel.tsx  ConfigPanel.tsx  CurvesPanel.tsx  LivePanel.tsx  MappingPanel.tsx
tools/rc-webui/src/context/: SerialContext.tsx
tools/rc-webui/src/hooks/: useSerial.ts
tools/rc-webui/src/lib/: protocol.ts
tools/rc-webui/src/types/: rc.ts
